# msi_installer

./: .cargo-wix.yaml  BUILD_INSTRUCTIONS.md  COMPLETE_SETUP.md  Cargo.toml  PATH_COMPARISON.md  PROJECT_SUMMARY.md  PYTHON_INSTALLATION_STEPS.md  QUICK_START.md  README.md  WORKFLOW_EXPLANATION.md  build.ps1  build.rs  build_msi.ps1  installer.ps1  installer_ae72b051-1a4c-4820-8a26-30773e552ee1.msi  test_install_with_branch.ps1  test_installer.ps1  wix.toml
.cargo/: config.toml
Ebantis_setup/: autostart.c  autostart.pyx  encryption.py  install.ps1  installation.c  installation.pyx  installation_run.py  installation_run.spec  requirements.txt  setup.py  uninstallation.c  uninstallation.cp310-win_amd64.pyd  uninstallation.pyx
Ebantis_setup/update/: AutoUpdaterService.py
Ebantis_setup/utils/: config.py  service.c  service.pyx
src/: main.rs
wix/: main.wxs
